--- a/colors/scoreboard.json.example
+++ b/colors/scoreboard.json.example
@@ -16,6 +16,33 @@
       "b": 59
     }
   },
+  "play_result": {
+    "text": {
+      "r": 255,
+      "g": 255,
+      "b": 255
+    },
+    "out": {
+      "r": 40,
+      "g": 40,
+      "b": 40
+    },
+    "on_base": {
+      "r": 35,
+      "g": 80,
+      "b": 120
+    },
+    "strikeout": {
+      "r": 120,
+      "g": 0,
+      "b": 0
+    },
+    "homerun": {
+      "r": 90,
+      "g": 90,
+      "b": 0
+    }
+  },
   "final": {
     "inning": {
       "r": 255,
@@ -32,6 +59,11 @@
       "g": 50,
       "b": 50
     }
+  },
+  "team_runline": {
+    "r": 255,
+    "g": 255,
+    "b": 255
   },
   "inning": {
     "break": {
@@ -119,10 +151,20 @@
       "g": 255,
       "b": 255
     },
+    "fast-pitch-bg": {
+      "r": 181,
+      "g": 46,
+      "b": 13
+    },
     "strikeout": {
       "r": 255,
       "g": 235,
       "b": 59
+    },
+    "pitch_count": {
+      "r": 255,
+      "g": 255,
+      "b": 255
     }
   },
   "batter_count": {
@@ -146,6 +188,26 @@
       "g": 235,
       "b": 59
     },
+    "record": {
+      "r": 255,
+      "g": 255,
+      "b": 255
+    },
+    "odds": {
+      "r": 50,
+      "g": 180,
+      "b": 50
+    },
+    "starter_name": {
+      "r": 255,
+      "g": 235,
+      "b": 59
+    },
+    "starter_stats": {
+      "r": 50,
+      "g": 180,
+      "b": 180
+    },
     "scrolling_text": {
       "r": 255,
       "g": 235,
@@ -153,13 +215,13 @@
     },
     "start_time": {
       "r": 255,
-      "g": 235,
-      "b": 59
+      "g": 255,
+      "b": 255
     },
     "warmup_text": {
       "r": 255,
-      "g": 235,
-      "b": 59
+      "g": 255,
+      "b": 255
     }
   },
   "status": {
@@ -172,6 +234,18 @@
       "r": 255,
       "g": 235,
       "b": 59
+    }
+  },
+  "postgame": {
+    "winner": {
+      "r": 255,
+      "g": 255,
+      "b": 255
+    },
+    "loser": {
+      "r": 170,
+      "g": 170,
+      "b": 170
     }
   },
   "standings": {
@@ -190,9 +264,9 @@
       }
     },
     "background": {
-      "r": 37,
-      "g": 102,
-      "b": 30
+      "r": 0,
+      "g": 0,
+      "b": 0
     },
     "divider": {
       "r": 13,
@@ -211,14 +285,14 @@
         "b": 170
       },
       "elim": {
-        "r": 190,
-        "g": 180,
-        "b": 160
+        "r": 200,
+        "g": 110,
+        "b": 110
       },
       "clinched": {
-        "r": 180,
-        "g": 210,
-        "b": 175
+        "r": 110,
+        "g": 200,
+        "b": 110
       },
       "stat": {
         "r": 171,
