--- a/colors/teams.json.example
+++ b/colors/teams.json.example
@@ -1,45 +1,50 @@
 {
   "ari": {
     "home": {
-      "r": 166,
-      "g": 25,
-      "b": 46
-    },
-    "text": {
-      "r": 217,
-      "g": 200,
-      "b": 157
+      "r": 227,
+      "g": 212,
+      "b": 173
     },
     "accent": {
-      "r": 0,
-      "g": 0,
-      "b": 0
+      "r": 167,
+      "g": 25,
+      "b": 48
+    },
+    "alt-accent": {
+      "r": 227,
+      "g": 212,
+      "b": 173
     }
   },
   "atl": {
     "home": {
-      "r": 12,
-      "g": 35,
-      "b": 64
+      "r": 19,
+      "g": 39,
+      "b": 79
     },
     "accent": {
-      "r": 186,
-      "g": 12,
-      "b": 47
+      "r": 206,
+      "g": 17,
+      "b": 65
+    },
+    "alt-accent": {
+      "r": 234,
+      "g": 170,
+      "b": 0
     }
   },
   "bal": {
     "home": {
-      "r": 252,
-      "g": 76,
-      "b": 2
-    },
-    "text": {
       "r": 0,
       "g": 0,
       "b": 0
     },
     "accent": {
+      "r": 223,
+      "g": 70,
+      "b": 1
+    },
+    "alt-accent": {
       "r": 255,
       "g": 255,
       "b": 255
@@ -47,40 +52,50 @@
   },
   "bos": {
     "home": {
-      "r": 200,
-      "g": 16,
-      "b": 46
+      "r": 13,
+      "g": 43,
+      "b": 86
     },
     "accent": {
-      "r": 12,
-      "g": 35,
-      "b": 64
+      "r": 189,
+      "g": 48,
+      "b": 57
+    },
+    "alt-accent": {
+      "r": 255,
+      "g": 255,
+      "b": 255
     }
   },
   "chc": {
     "home": {
-      "r": 0,
-      "g": 47,
-      "b": 108
+      "r": 14,
+      "g": 51,
+      "b": 134
     },
     "accent": {
-      "r": 200,
-      "g": 16,
-      "b": 46
+      "r": 204,
+      "g": 52,
+      "b": 51
+    },
+    "alt-accent": {
+      "r": 255,
+      "g": 255,
+      "b": 255
     }
   },
   "cws": {
     "home": {
-      "r": 0,
-      "g": 0,
-      "b": 0
-    },
-    "text": {
-      "r": 141,
-      "g": 144,
-      "b": 147
+      "r": 255,
+      "g": 255,
+      "b": 255
     },
     "accent": {
+      "r": 200,
+      "g": 200,
+      "b": 200
+    },
+    "alt-accent": {
       "r": 255,
       "g": 255,
       "b": 255
@@ -88,127 +103,137 @@
   },
   "cin": {
     "home": {
-      "r": 186,
-      "g": 12,
-      "b": 47
+      "r": 198,
+      "g": 1,
+      "b": 31
     },
     "accent": {
-      "r":0,
-      "g":0,
-      "b":0
+      "r":255,
+      "g":255,
+      "b":255
+    },
+    "alt-accent": {
+      "r": 198,
+      "g": 1,
+      "b": 31
     }
   },
   "cle": {
     "home": {
-      "r": 15,
-      "g": 34,
-      "b": 62
+      "r": 0,
+      "g": 43,
+      "b": 92
     },
     "accent": {
       "r": 227,
       "g": 25,
       "b": 55
+    },
+    "alt-accent": {
+      "r": 255,
+      "g": 255,
+      "b": 255
     }
   },
   "col": {
     "home": {
-      "r": 51,
-      "g": 0,
-      "b": 114
-    },
-    "text": {
-      "r": 141,
-      "g": 144,
-      "b": 147
-    },
-    "accent": {
       "r": 0,
       "g": 0,
       "b": 0
+    },
+    "accent": {
+      "r": 51,
+      "g": 0,
+      "b": 111
+    },
+    "alt-accent": {
+      "r": 255,
+      "g": 255,
+      "b": 255
     }
   },
   "det": {
     "home": {
       "r": 12,
-      "g": 35,
-      "b": 64
-    },
-    "text": {
-      "r": 250,
-      "g": 70,
-      "b": 22
+      "g": 44,
+      "b": 86
     },
     "accent": {
-      "r": 250,
-      "g": 70,
-      "b": 22
+      "r": 255,
+      "g": 102,
+      "b": 0
+    },
+    "alt-accent": {
+      "r": 255,
+      "g": 102,
+      "b": 0
     }
   },
   "hou": {
     "home": {
-      "r": 4,
-      "g": 30,
-      "b": 66
-    },
-    "text": {
-      "r": 207,
-      "g": 69,
-      "b": 32
+      "r": 0,
+      "g": 45,
+      "b": 98
     },
     "accent": {
-      "r": 229,
-      "g": 114,
-      "b": 0
+      "r": 235,
+      "g": 110,
+      "b": 31
+    },
+    "alt-accent": {
+      "r": 255,
+      "g": 255,
+      "b": 255
     }
   },
   "kc": {
     "home": {
       "r": 0,
-      "g": 45,
-      "b": 114
+      "g": 70,
+      "b": 135
     },
     "accent": {
-      "r": 137,
-      "g": 115,
-      "b": 76
+      "r": 192,
+      "g": 154,
+      "b": 91
+    },
+    "alt-accent": {
+      "r": 192,
+      "g": 154,
+      "b": 91
     }
   },
   "laa": {
     "home": {
       "r": 186,
-      "g": 12,
-      "b": 47
+      "g": 0,
+      "b": 33
     },
     "accent": {
-      "r": 12,
-      "g": 35,
-      "b": 64
+      "r": 0,
+      "g": 50,
+      "b": 99
     }
   },
   "lad": {
     "home": {
-      "r": 0,
-      "g": 47,
-      "b": 108
-    },
-    "text": {
       "r": 255,
       "g": 255,
       "b": 255
     },
     "accent": {
-      "r": 145,
-      "g": 157,
-      "b": 157
+      "r": 0,
+      "g": 90,
+      "b": 156
+    },
+    "alt-accent": {
+      "r": 255,
+      "g": 255,
+      "b": 255
     }
   },
   "mia": {
     "home": {
-      "r": 0,
-      "g": 0,
-      "b": 0
-    },
-    "text": {
       "r": 0,
       "g": 163,
       "b": 224
@@ -217,35 +242,45 @@
       "r": 239,
       "g": 51,
       "b": 64
+    },
+    "alt-accent": {
+      "r": 239,
+      "g": 51,
+      "b": 64
     }
   },
   "mil": {
     "home": {
-      "r": 19,
-      "g": 41,
+      "r": 18,
+      "g": 40,
       "b": 75
     },
-    "text": {
-      "r": 255,
-      "g": 199,
-      "b": 44
-    },
     "accent": {
-      "r": 0,
-      "g": 61,
-      "b": 165
+      "r": 225,
+      "g": 197,
+      "b": 47
+    },
+    "alt-accent": {
+      "r": 255,
+      "g": 255,
+      "b": 255
     }
   },
   "min": {
     "home": {
-      "r": 12,
-      "g": 35,
-      "b": 64
+      "r": 255,
+      "g": 255,
+      "b": 255
     },
     "accent": {
-      "r": 186,
-      "g": 12,
-      "b": 47
+      "r": 211,
+      "g": 17,
+      "b": 69
+    },
+    "alt-accent": {
+      "r": 255,
+      "g": 255,
+      "b": 255
     }
   },
   "nym": {
@@ -254,51 +289,66 @@
       "g": 45,
       "b": 114
     },
-    "text": {
-      "r": 252,
-      "g": 76,
-      "b": 2
+    "accent": {
+      "r": 255,
+      "g": 89,
+      "b": 16
+    },
+    "alt-accent": {
+      "r": 255,
+      "g": 89,
+      "b": 16
+    }
+  },
+  "nyy": {
+    "home": {
+      "r": 19,
+      "g": 36,
+      "b": 72
     },
     "accent": {
       "r": 255,
       "g": 255,
       "b": 255
-    }
-  },
-  "nyy": {
-    "home": {
-      "r": 12,
-      "g": 35,
-      "b": 64
+    },
+    "alt-accent": {
+      "r": 255,
+      "g": 255,
+      "b": 255
     }
   },
   "oak": {
     "home": {
-      "r": 2,
-      "g": 70,
-      "b": 56
-    },
-    "text": {
-      "r": 255,
-      "g": 184,
-      "b": 28
+      "r": 0,
+      "g": 56,
+      "b": 49
     },
     "accent": {
-      "r": 255,
-      "g": 184,
-      "b": 28
+      "r": 239,
+      "g": 178,
+      "b": 30
+    },
+    "alt-accent": {
+      "r": 239,
+      "g": 178,
+      "b": 30
     }
   },
   "phi": {
     "home": {
-      "r": 186,
-      "g": 12,
-      "b": 47
+      "r": 232,
+      "g": 24,
+      "b": 40
     },
     "accent": {
-      "r": 0,
-      "g": 45,
-      "b": 114
+      "r": 255,
+      "g": 255,
+      "b": 255
+    },
+    "alt-accent": {
+      "r": 232,
+      "g": 24,
+      "b": 20
     }
   },
   "pit": {
@@ -307,49 +357,49 @@
       "g": 0,
       "b": 0
     },
-    "text": {
-      "r": 255,
-      "g": 199,
-      "b": 44
-    },
     "accent": {
-      "r": 255,
-      "g": 199,
-      "b": 44
+      "r": 253,
+      "g": 184,
+      "b": 39
+    },
+    "alt-accent": {
+      "r": 253,
+      "g": 184,
+      "b": 39
     }
   },
   "sd": {
     "home": {
-      "r": 62,
-      "g": 52,
-      "b": 47
-    },
-    "text": {
-      "r": 255,
-      "g": 199,
-      "b": 44
+      "r": 47,
+      "g": 36,
+      "b": 29
     },
     "accent": {
-      "r": 183,
-      "g": 169,
-      "b": 154
+      "r": 255,
+      "g": 196,
+      "b": 37
+    },
+    "alt-accent": {
+      "r": 255,
+      "g": 255,
+      "b": 255
     }
   },
   "sf": {
     "home": {
-      "r": 250,
-      "g": 70,
-      "b": 22
-    },
-    "text": {
       "r": 0,
       "g": 0,
       "b": 0
     },
     "accent": {
-      "r": 239,
-      "g": 209,
-      "b": 159
+      "r": 253,
+      "g": 91,
+      "b": 30
+    },
+    "alt-accent": {
+      "r": 255,
+      "g": 255,
+      "b": 255
     }
   },
   "sea": {
@@ -358,75 +408,100 @@
       "g": 44,
       "b": 86
     },
-    "text": {
-      "r": 141,
-      "g": 144,
-      "b": 147
-    },
     "accent": {
       "r": 0,
-      "g": 104,
-      "b": 94
+      "g": 92,
+      "b": 92
+    },
+    "alt-accent": {
+      "r": 255,
+      "g": 196,
+      "b": 37
     }
   },
   "stl": {
     "home": {
-      "r": 186,
-      "g": 12,
-      "b": 47
+      "r": 196,
+      "g": 30,
+      "b": 58
     },
     "accent": {
-      "r": 12,
-      "g": 35,
-      "b": 64
-    } 
+      "r": 255,
+      "g": 255,
+      "b": 255
+    },
+    "alt-accent": {
+      "r": 196,
+      "g": 30,
+      "b": 58
+    }
   },
   "tb": {
     "home": {
-      "r": 4,
-      "g": 30,
-      "b": 66
+      "r": 9,
+      "g": 44,
+      "b": 92
     },
     "accent": {
-      "r": 105,
-      "g": 179,
-      "b": 231
+      "r": 143,
+      "g": 188,
+      "b": 210
+    },
+    "alt-accent": {
+      "r": 245,
+      "g": 209,
+      "b": 48
     }
   },
   "tex": {
     "home": {
       "r": 0,
-      "g": 45,
-      "b": 114
+      "g": 50,
+      "b": 120
     },
     "accent": {
-      "r": 186,
-      "g": 12,
-      "b": 47
+      "r": 192,
+      "g": 17,
+      "b": 31
+    },
+    "alt-accent": {
+      "r": 255,
+      "g": 255,
+      "b": 255
     }
   },
   "tor": {
     "home": {
-      "r": 0,
-      "g": 61,
-      "b": 165
+      "r": 19,
+      "g": 74,
+      "b": 142
     },
     "accent": {
-      "r": 108,
-      "g": 172,
-      "b": 228
+      "r": 232,
+      "g": 41,
+      "b": 28
+    },
+    "alt-accent": {
+      "r": 232,
+      "g": 41,
+      "b": 28
     }
   },
   "wsh": {
     "home": {
-      "r": 186,
-      "g": 12,
-      "b": 47
+      "r": 171,
+      "g": 0,
+      "b": 3
     },
     "accent": {
-      "r": 4,
-      "g": 30,
-      "b": 66
+      "r": 255,
+      "g": 255,
+      "b": 255
+    },
+    "alt-accent": {
+      "r": 171,
+      "g": 0,
+      "b": 3
     }
   },
   "nl": {
