--- a/coordinates/w128h64.json.example
+++ b/coordinates/w128h64.json.example
@@ -1,4 +1,39 @@
 {
+  "football": {
+    "in_game": {
+      "away_team": {
+        "x": 0,
+        "y": 0,
+        "size": 20
+      },
+      "away_score": {
+        "x": 0,
+        "y": 0,
+        "size": 20,
+        "font_name": "7x13"
+      },
+      "away_prob": {
+        "x": 40,
+        "y": 20,
+        "width": 4
+      },
+      "quarter_num": {
+        "x": 48,
+        "y": 8,
+        "font_name": "6x12"
+      },
+      "quarter_ordinal": {
+        "x": 54,
+        "y": 5,
+        "font_name": "5x7"
+      },
+      "play_time_right": {
+        "x": 82,
+        "y": 8,
+        "font_name": "6x12"
+      }
+    }
+  },
   "defaults": {
     "font_name": "7x13"
   },
